--- a/events.html
+++ b/events.html
@@ -87,7 +87,7 @@
                           </tr>
                           <tr>
                             <td class="hour">15:15-15:30</td>
-                            <td><p>Petr Mariel, Jürgen Meyerhoff, Martina: Welcome to Leuven</p></td>
+                            <td><p>Petr Mariel, Jürgen Meyerhoff, Martina Vandebroek: Welcome to Leuven</p></td>
                           </tr>
                           <tr>
                             <td class="hour">15:30-16:00</td>
@@ -196,7 +196,7 @@
                           </tr>
                             <td class="hour">15:00-15:30</td>
                             <td>
-                              <p>Cristiano Franceschinis: Looking for the equilibrium for a new Water Credit Market: a combined WTP and WTA CE</p>
+                              <p>Ulf Liebe: Modelling Heterogeneity in Factorial Survey Data</p>
                             </td>
                           </tr>
                           <tr>
