--- a/people.html
+++ b/people.html
@@ -81,8 +81,8 @@
               <h4><a href="https://www.petrmariel.me/">Petr Mariel</a></h4>
               <p>University of the Basque Country, UPV/EHU</p>
               
-              <h4><a href="https://www.researchgate.net/profile/Juergen-Meyerhoff">Jürgen Meyerhoff</a></h4>
-              <p>Technical University of Berlin / Christian-Albrechts-Universit&auml;t zu Kiel</p> 
+              <h4><a href="https://www.researchgate.net/profile/Juergen-Meyerhoff">Jürgen Meyerhoff</a></h3>
+              <p>Hochschule f&uuml;r Wirtschaft und Recht Berlin (HWR) / Christian-Albrechts-Universit&auml;t zu Kiel</p> 
               
               <h4><a href="http://ifro.ku.dk/english/staff/?pure=en/persons/269135">Søren Bøye Olsen</a></h4>
               <p>University of Copenhagen</p>
