summer-schools.html

--- a/summer-schools.html
+++ b/summer-schools.html
@@ -37,7 +37,7 @@
       </div>
       
       <div>
-        <p>Envecho Group organised the following Summer Schools</p>
+        <p>Members of the Envecho group were involved in these Summer Schools:</p>
         </br>
         <div>
           <h4>1&#41; Using Discrete Choice Experiments for the Economic Valuation of Ecosystem Services in Rural Landscapes</h4>
