Summer-schools.html

--- a/summer-schools.html
+++ b/summer-schools.html
@@ -41,7 +41,7 @@
         </br>
         <div>
           <h4>1&#41; Using Discrete Choice Experiments for the Economic Valuation of Ecosystem Services in Rural Landscapes</h4>
-          <p>Organised by the Technical University of Berlin and the Institute for Ecological Research, in collaboration with the Leibniz Centre for Agricultural Landscape Research (ZALF) in Vierraden, Germany. This summer school took place from September 3 to September 9, 2017.</p>
+          <p>Organised by the Technical University of Berlin, the Institute for Ecological Research and the Leibniz Centre for Agricultural Landscape Research (ZALF) in Vierraden, Germany. This summer school took place from September 3 to September 9, 2017.</p>
           <p>Instructors:</p>
           <ul>
             <li>Katrin Rehdanz - Christian-Albrechts-Universität zu Kiel</li>
