--- a/events.html
+++ b/events.html
@@ -71,6 +71,11 @@
                       <div class="center-text">
                         <h3>The ENVECHO XII European Workshop on Discrete Choice Experiments</h3>
                           <h4>will be celebrated at the <a href="https://feb.kuleuven.be/eng">Faculty of Economics and Business, KU Leuven</a> on September 1-2, 2025</h4>
+                        <p>
+                         Local organisers: 
+                         <a href="https://www.kuleuven.be/wieiswie/en/person/00004359">Martina Vandebroek</a>, 
+                         <a href="https://www.kuleuven.be/wieiswie/en/person/00007410">Sandra Rousseau</a>.
+                        </p>
                       </div>
                       <br>
                       <b>Program</b>
