--- a/events.html
+++ b/events.html
@@ -92,7 +92,7 @@
                           </tr>
                           <tr>
                             <td class="hour">15:15-15:30</td>
-                            <td><p>Petr Mariel, Jürgen Meyerhoff, Martina Vandebroek: Welcome to Leuven</p></td>
+                            <td><p>Mara Thiene, Petr Mariel, Jürgen Meyerhoff, Martina Vandebroek: Welcome to Leuven</p></td>
                           </tr>
                           <tr>
                             <td class="hour">15:30-16:00</td>
