--- a/books.html
+++ b/books.html
@@ -37,7 +37,7 @@
       </div>
       
       <div class="marketing">
-        <h3>The members of envecho.com group have published the following open access books</h3>
+        <h3>Members of envecho.com group have published the following open access books</h3>
         <div class="media">
           <div class="media-left">
           <a href="https://link.springer.com/book/10.1007%2F978-3-030-62669-3">
