--- a/events.html
+++ b/events.html
@@ -877,7 +877,7 @@
                     <b>Chair</b>
                     <p>Giovanni Signorello, Maria DeSalvo</p>
                     <b>Co-organisers</b>
-                    <p>David Hoyos, Petr Mariel, Jürgen Meyerhoff and Mara Thiene</p>
+                    <p>David Hoyos, Petr Mariel, Jürgen Meyerhoff, Mara Thiene and Laura Giuffrida</p>
                     <b>Program</b>
                     <table class="table">
                       <tr class="center-text">
