--- a/people.html
+++ b/people.html
@@ -114,6 +114,9 @@
               <h4><a href="https://czp.cuni.cz/en/about-us/staff/milan-scasny">Milan &#352;časný
 </a></h4>
               <p>Charles University</p>
+
+              <h4><a href="https://www.di3a.unict.it/research-fellows/laura.giuffrida">Laura Giuffrida</a></h4>
+              <p>University of Catania</p>
             </div>
         </div>    
     </div> <!-- /container -->
