--- a/events.html
+++ b/events.html
@@ -43,6 +43,7 @@
         <div id="year-menu" class="center center-text">
             <nav>
                 <ul class="nav nav-pills big-pills">
+                  <li role="presentation"><a href="#2026">2026</a></li>
                   <li role="presentation"><a href="#2025">2025</a></li>
                   <li role="presentation"><a href="#2024">2024</a></li>
                   <li role="presentation"><a href="#2023">2023</a></li>
@@ -62,6 +63,22 @@
         </div>
         <br><br>
         <div id="events-per-year">
+          <div>
+            <a name="2026"></a>
+            <h2 class="center">2026</h2>
+            <div class="event-list">
+                <div class="event">
+                    <div class="event-meta">
+                      <div class="center-text">
+                        <h3>The ENVECHO XIII European Workshop on Discrete Choice Experiments</h3>
+                          <h4>will be celebrated at the <a href="https://catedra.us.es/eemedioambiente/">Chair of Energy and Environmental Economics, Seville</a> on September 1, 2026</h4>
+                      </div>
+                      <br>
+                      <b>Program</b>
+                    </div>
+                </div>
+            </div>
+          </div>
           <div>
             <a name="2025"></a>
             <h2 class="center">2025</h2>
